2013-10-29  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSTimeZone.m: Implement -hash as the hash of the time zone
        name so that we can find equal timezones in a set/dictionary as we
        should, rather than onlyn finding identical time zones.

2013-10-28  Richard Frith-Macdonald <rfm@gnu.org>

        * Tools/AGSParser.m: Add code to ignore NS_FORMAT_ARGUMENT and
        NS_FORMAT_FUNCTION macros inside variable declarations.

2013-10-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSFileHandle.m: Fix retention of singletons and add exception
        if an attempt is made to release too many times.
        * Tools/make_strings/make_strings.m: fix minor coding standard errrors.
        * Tests/base/NSFileHandle/basic.m:
        * Tests/base/NSFileHandle/singleton.m:
        Correct faulty tests.
        * Source/NSPredicate.m: ([_evaluateLeftValue:rightValue:object:])
        Add missing check for NSNotEqualToPredicateOperatorType spotted by Fred

2013-10-26  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSPredicate.m: ([_evaluateLeftValue:rightValue:object:])
        should return either YES or NO in all cases.

2013-10-25  Richard Frith-Macdonald <rfm@gnu.org>

        * Tools/make_strings/StringsFile.m:
        Fix bogus space after semicolon.

2013-10-25  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSSocketStream.m:
        * Source/GSTLS.m:
        Attempt to better handle TLS handshake failure.

2013-10-24  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSHTTPURLHandle.m:
        Close socket immediately on SSL handlshake failure, rather than
        waiting for cleanup on dealloc.

2013-10-18  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSPredicate.m: Fix faulty casts of immutable array to mutable.

2013-10-17  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSException.m:
	* Headers/Foundation/NSThread.h: Add trivial implementation of